--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -59,7 +59,7 @@
             {% if p.preview.path is defined %}
                 <div class="new-item row">
                     <div class="col-sm-3 hidden-xs">
-                        <img src="{{ p.preview.path }}" class="img-thumbnail">
+                        <img src="{{ p.preview.path }}" class="img-thumbnail" alt="{{ p.title }}" title="{{ p.title }}">
                     </div>
                     <div class="col-xs-12 col-sm-9">
                         <div class="p-date">{{ p.start | date('d.m.Y') }} - {{ p.end | date('d.m.Y') }}</div>
@@ -72,6 +72,7 @@
             {% else %}
                 <div class="new-item row">
                     <div class="col-xs-12">
+                        <div class="p-date">{{ p.start | date('d.m.Y') }} - {{ p.end | date('d.m.Y') }}</div>
                         <div class="p-title">
                             <a href="{{ path('event',{'url' : p.id }) }}">{{ p.title }}</a>
                         </div>
