update routing structure

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -55,7 +55,7 @@
             {% endfor %}
             <br />
             <div class="text-left">
-                <a href="{{ path('news') }}" style="font-size: 15px; text-decoration: underline;"><b>Читать все новости медицины</b></a>
+                <a href="{{ path('publications_by_category') }}" style="font-size: 15px; text-decoration: underline;"><b>Читать все новости медицины</b></a>
             </div>
         </div>
     </div>
