update routing structure

--- a/src/AppBundle/Resources/views/Publication/publications.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publications.html.twig
@@ -6,8 +6,11 @@
 {% elseif category is defined and  category == 'study' %}
     {% set categoryTitle = 'Клинические случаи' %}
     {% set categoryDesc = 'Клинические случаи заболеваний, описание неожиданных побочных воздействий лекарственных препаратов на сайте Альманах медицинских событий' %}
-{% else %}
+{% elseif category is defined and  category == 'news' %}
     {% set categoryTitle = 'Новости медицины' %}
+    {% set categoryDesc = 'Последние новости в сфере медицины на сайте Альманах медицинских событий' %}
+{% else %}
+    {% set categoryTitle = 'медицинские публикации' %}
     {% set categoryDesc = 'Последние новости в сфере медицины на сайте Альманах медицинских событий' %}
 {% endif %}
 {% set categoryKeywords = 'Медицинский альманах, Новости медицины, события, медицинские мероприятия, ФПДО, обучение для врачей, клинические случаи' %}
