--- a/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
+++ b/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
@@ -17,7 +17,12 @@
 
 
 {% block content %}
-        <div class="title"><div>Медицинские сокращения и термины</div></div>
+    <div class="title"><h1>Медицинские сокращения и термины</h1></div>
+    <ol class="breadcrumb">
+        <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
+            <a itemprop="url" href="/"><span itemprop="title">Главная</span></a></li>
+        <li class="active">Медицинские сокращения и термины</li>
+    </ol>
     <table class="table">
         <tr>
             <th><b>Сокращение</b></th>
