--- a/src/AppBundle/Resources/views/Default/partners.html.twig
+++ b/src/AppBundle/Resources/views/Default/partners.html.twig
@@ -17,7 +17,13 @@
     <link rel="stylesheet" href="{{ asset('assets/vendor/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
 {% endblock %}
 {% block content %}
-    <h1 class="blue-text">Наши партнеры</h1>
+    <div class="title"><h1 class="blue-text">Наши партнеры</h1></div>
+    <ol class="breadcrumb">
+        <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
+            <a itemprop="url" href="/"><span itemprop="title">Главная</span></a></li>
+        <li class="active">Наши партнеры</li>
+    </ol>
+
     <br />
     {% for p in partners %}
         <div class="row">
