--- a/src/AppBundle/Resources/views/Publication/page.html.twig
+++ b/src/AppBundle/Resources/views/Publication/page.html.twig
@@ -9,6 +9,11 @@
 {% block content %}
     <div class="col-sm-12" style="padding-right: 0">
         <div class="title text-uppercase"><h1>{{ page.title }}</h1></div>
+        <ol class="breadcrumb">
+            <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
+                <a itemprop="url" href="/"><span itemprop="title">Главная</span></a></li>
+            <li class="active">{{ page.title }}</li>
+        </ol>
         <div>
             {{ page.body | raw }}
         </div>
