--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -836,3 +836,9 @@ nav .navbar-nav li.active a:hover {
     display: none;
   }
 }
+.publication-title {
+  font-size: 16px;
+  padding: 5px 0;
+  margin: 0;
+  font-weight: bold;
+}
