--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -6,7 +6,7 @@
     {% set publicationUrl = path('new',{'url' : (publication.slug != null ? publication.slug : publication.id) })  %}
 {% endif %}
 
-<article class="new-item row" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="new-item row" itemscope itemtype="http://schema.org/NewsArticle">
     <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
     {% if publication.preview.path is defined %}
         <div class="col-sm-3 hidden-xs">
