--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -36,7 +36,7 @@
         <div class="col-xs-6 col-md-5 text-right">
             <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
         </div>
-        <div class="hidden" itemprop="datePublished">
+        <div class="hidden">
             Автор: <span itemprop="author">{{ publication.author.name }}</span>
         </div>
         {#<div class="col-xs-4 text-right">#}
