--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -12,8 +12,8 @@
             <a href="{{ publicationUrl }}">
                 <div itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
                     <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
-                    {#<meta itemprop="height" content="">#}
-                    {#<meta itemprop="width" content="">#}
+                    <meta itemprop="height" content="150">
+                    <meta itemprop="width" content="250">
                     <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
                 </div>
             </a>
