add schema org in list publications

--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -45,7 +45,7 @@
 
             <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
                 <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-                    <meta itemprop="url" content="Альманах медицинских событий">
+                    <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
                     <img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
                 </div>
                 <span itemprop="name">medalmanah.ru</span>
