--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -36,6 +36,7 @@
     <div class="row publication-footerline">
         <div class="col-xs-6 col-md-4 col-md-offset-3 text-left">
             <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
+            <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
         </div>
         <div class="col-xs-6 col-md-5 text-right">
             <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
