--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -7,6 +7,11 @@
 {% endif %}
 
 <article class="new-item row" itemscope itemtype="http://schema.org/NewsArticle">
+    {% if publication.source %}
+        <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
+    {% else %}
+        <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
+    {% endif %}
     {% if publication.preview.path is defined %}
         <div class="col-sm-3 hidden-xs">
             <a href="{{ publicationUrl }}">
