add schema org in list publications

--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -19,7 +19,7 @@
                     <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
                     <meta itemprop="height" content="150">
                     <meta itemprop="width" content="250">
-                    {#<meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">#}
+                    <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
                 </div>
             </a>
         </div>
