--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -6,38 +6,39 @@
     {% set publicationUrl = path('new',{'url' : (publication.slug != null ? publication.slug : publication.id) })  %}
 {% endif %}
 
-<article class="new-item row" itemscope itemtype="http://schema.org/NewsArticle">
-    {% if publication.source %}
-        <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
-    {% else %}
-        <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
-    {% endif %}
-    {% if publication.preview.path is defined %}
-        <div class="col-sm-3 hidden-xs">
-            <a href="{{ publicationUrl }}">
-                <div itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
-                    <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
-                    <meta itemprop="height" content="150">
-                    <meta itemprop="width" content="250">
-                    <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
-                </div>
-            </a>
-        </div>
-        <div class="col-xs-12 col-sm-9">
-            <a href="{{ publicationUrl }}">
-                <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
-            </a>
-            <p class="new-body" itemprop="description">{{ publication.anons }}</p>
-        </div>
-    {% else %}
-        <div class="col-xs-12">
-            <a href="{{ publicationUrl }}">
-                <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
-            </a>
-            <p class="new-body" itemprop="description">{{ publication.anons }}</p>
-        </div>
-    {% endif %}
-
+<article class="new-item " itemscope itemtype="http://schema.org/NewsArticle">
+    <div class="row">
+        {% if publication.source %}
+            <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
+        {% else %}
+            <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
+        {% endif %}
+        {% if publication.preview.path is defined %}
+            <div class="col-sm-3 hidden-xs">
+                <a href="{{ publicationUrl }}">
+                    <div itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+                        <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
+                        <meta itemprop="height" content="150">
+                        <meta itemprop="width" content="250">
+                        <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <a href="{{ publicationUrl }}">
+                    <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
+                </a>
+                <p class="new-body" itemprop="description">{{ publication.anons }}</p>
+            </div>
+        {% else %}
+            <div class="col-xs-12">
+                <a href="{{ publicationUrl }}">
+                    <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
+                </a>
+                <p class="new-body" itemprop="description">{{ publication.anons }}</p>
+            </div>
+        {% endif %}
+    </div>
     <div class="row publication-footerline">
         <div class="col-xs-6 col-md-4 col-md-offset-3 text-left">
             <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
@@ -46,19 +47,16 @@
         <div class="col-xs-6 col-md-5 text-right">
             <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
         </div>
-        <div class="hidden">
-            Автор: <span itemprop="author">{{ publication.author.name }}</span>
+    </div>
 
-            <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-                <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-                    <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
-                    <img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
-                </div>
-                <span itemprop="name">medalmanah.ru</span>
+    <div class="hidden">
+        Автор: <span itemprop="author">{{ publication.author.name }}</span>
+        <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+            <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
+                <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
+                <img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
             </div>
+            <span itemprop="name">medalmanah.ru</span>
         </div>
-        {#<div class="col-xs-4 text-right">#}
-        {#<span class="publication-share"><span class="hidden-xs">Рассказать</span> <span class="glyphicon glyphicon-share-alt"></span></span>#}
-        {#</div>#}
     </div>
 </article>
