--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -50,7 +50,7 @@
         <link itemprop="mainEntityOfPage" itemscope href="{{ publicationUrl }}" />
         <div class="col-sm-12">
             <div>
-                <div class="title" itemprop="name"><h1 itemprop="name">{{ publication.title }}</h1></div>
+                <div class="title"><h1 itemprop="headline">{{ publication.title }}</h1></div>
                 <meta itemprop="inLanguage" content="ru" />
 
                 <ol class="breadcrumb">
